--- a/week03/styles.css
+++ b/week03/styles.css
@@ -11,5 +11,17 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #F7F3DE;
-  
+}
+
+header h1{
+  font-size: 350%;
+  color: #7C1A00;
+  padding: 40px 40px 40px 120px;
+  background-image: url("header-image-1.gif");
+  background-position: left top;
+  background-repeat: no-repeat;
+}
+
+section{
+
 }
